[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "faucet"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint   = []
no-idl          = []
no-log-ix-name  = []
cpi             = ["no-entrypoint"]
default         = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl   = "0.31.0"
